Replace info/warn image to colum

--- a/index.html
+++ b/index.html
@@ -129,19 +129,12 @@ th,td.article{border:0;text-align:left;padding:0 0 0 1em;}
 <dd>ユーザが示されている文字通りに入力しなければならないコマンドやソースコード、ソースコード中で強調したい箇所に使われます。この表記は通常、角が丸い四角形で囲われます。</dd>
 </dl>
 
-<div class="referbox">
-<img src="/img/info.png" alt="info">
-<div class="text"><p><b>参考情報</b></p><p>ヒントや参考情報、コメントを示します。</p></div>
-</div>
-
-<div class="referbox">
-<img src="/img/warn.png" alt="warn">
-<div class="text"><p><b>注意</b></p><p>注意や警告を示します。</p></div>
-</div>
+<div class="colum">
+<div class="title">コラム</div>
+<div class="text"><p>本文とは外れた話題や閑話休題などに使われます。</p>
+</div></div>
 
 <p>Webページからテキストを引用した場合、引用元の修飾もそのまま残します。つまり上記の表記ルールから逸脱した利用方法でも、引用した文章がBoldやItalicで修飾されていたならタグを削除せず元のまま表記します。</p>
-
-<p>本表記ルールはO'Reilly Media, Inc.また株式会社オライリー・ジャパンから出版されている書籍のものを参考にしました。</p>
 
 <h2 id="about">このサイトについて</h2>
 <p>このサイトは榎本優樹（Enomoto Yuuki）&lt;<a href="mailto:uki@e-yuuki.org">uki@e-yuuki.org</a>&gt;の個人的な文書です。</p>
