--- a/netbsd/how_to_be_developer.html
+++ b/netbsd/how_to_be_developer.html
@@ -27,13 +27,11 @@
 <h2>できそうなことを見つける</h2>
 <p>NetBSD/<code>pkgsrc(7)</code>を使っていく中で、少なからず不便に思った点や困った点が見つかるときがきます。それはカーネルやユーザランドプログラムの不具合に遭遇してしまったときかもしれませんし、求めているデバイスドライバが存在しないときかもしれませんし、ドキュメントが古くて調べものに時間がかかってしまったときかもしれません。そのとき、その問題を自分で解決したいと思ったのであれば、それはThe NetBSD Projectへ参加する動機になるでしょう。</p>
 
-<div class="referbox">
-<img src=/img/info.png alt="comment">
+<div class="colum">
+<div class="title">Do It Yourselfはどこから？</div>
 <div class="text">
-<p><b>Do It Yourselfはどこから？</b></p>
 <p>なお、ここには飛躍があります。それは、利用者が公開されているソースコードを頼りに自力でなんとかしようとするだろうという前提で書かれているということです。「ただ使うだけ」の状態から「いざとなったら自分で直してみよう」という気持ちにさせるには、なにかしらの訓練が不可欠ではないかと考えています。これは難しいことですしどうすればいいのかもよくわかりません。本稿の範囲外です。</p>
-</div>
-</div>
+</div></div>
 
 <h3>Project proposals for NetBSD</h3>
 <p>NetBSD Wikiの<a href="https://wiki.netbsd.org/projects/">Project proposals for NetBSD</a>には未解決・進行中のプロジェクトの一覧が載っています。もしあなたが問題解決好きなエンジニアであればこの中から自身のスキルと嗜好に合ったものを探してみるといいでしょう。しかし中には古い情報が含まれている可能性もあります。興味のあるプロジェクトを見つけたら、<a href="https://www.netbsd.org/mailinglists/">メーリングリスト</a>に興味がある旨を投稿するのが一番です。</p>
