--- a/practice/remotework.html
+++ b/practice/remotework.html
@@ -155,15 +155,13 @@
 
 <p>福利厚生に関する要求を主張するときは、議論に勝つことではなく福利厚生の改善が目的なのを忘れないようにしましょう。議論に勝ち、相手の誤りを指摘し、興奮した口調でまくしたててなにが変わるのでしょうか？ 仮に今回は「勝った」として、次回から交渉のテーブルが設けられることはあるのでしょうか？ 制度を決める側も完璧ではありません。経験のない職種や暮らしたことがない地域のことがよく分かっていないだけかもしれません。このようなときにこそ歩み寄りと相互理解の努力が求められます。</p>
 
-<div class="referbox">
-  <img src="/img/info.png" alt="info">
-  <div class="text">
-    <p><b>地域の都合は住んでみないと分からない？</b></p>
-    <p>新型コロナウイルス感染拡大防止のために、事態収束まで特別の事情がない限り出社は禁止でリモートワークすることになりました。この「原則リモートワーク」の状況は立て続けに延長され、ついには6ヶ月以上先まで延長されました。</p>
-    <p>リモートワークなら冬の間は暖房代がかかって大変だと関東在住の人事部の方に話すと「でも東京も夏は冷房代がかかりますよ」と返されました。東京の冷房代と北海道冬季の暖房代が等しいと思っているような言い方でした。話を続けると「暖房代」とは電気代のことだと思っていたようです。冬の北海道では灯油ストーブが暖房としてひろく使われており、灯油代は電気代より高いことを話すと、とても驚いていました。</p>
-    <p>反対に、北海道から離れたことのない人は東京で連日続く殺人的な蒸し暑さや水のまずさや川の汚さを想像するのが難しいでしょう。その地域の都合は実際に暮らしてみないと分からないものではないでしょうか。</p>
-  </div>
-</div>
+<div class="colum">
+<div class="title">地域の都合は住んでみないと分からない？</div>
+<div class="text">
+<p>新型コロナウイルス感染拡大防止のために、事態収束まで特別の事情がない限り出社は禁止でリモートワークすることになりました。この「原則リモートワーク」の状況は立て続けに延長され、ついには6ヶ月以上先まで延長されました。</p>
+<p>リモートワークなら冬の間は暖房代がかかって大変だと関東在住の人事部の方に話すと「でも東京も夏は冷房代がかかりますよ」と返されました。東京の冷房代と北海道冬季の暖房代が等しいと思っているような言い方でした。話を続けると「暖房代」とは電気代のことだと思っていたようです。冬の北海道では灯油ストーブが暖房としてひろく使われており、灯油代は電気代より高いことを話すと、とても驚いていました。</p>
+<p>反対に、北海道から離れたことのない人は東京で連日続く殺人的な蒸し暑さや水のまずさや川の汚さを想像するのが難しいでしょう。その地域の都合は実際に暮らしてみないと分からないものではないでしょうか。</p>
+</div></div>
 
 <h2 id="ref">参考文献</h2>
 <dl>
