--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@ th,td.article{border:0;text-align:left;padding:0 0 0 1em;}
 <h3 id="essay">エッセイ</h3>
 <table class="article">
   <tbody>
+    <tr><td class="date">2022/02/06</td><td class="article"><a href="./essay/recent_state_2022feb.html">近況&mdash;&mdash;2022年2月</a></td></tr>
     <tr><td class="date">2020/09/12</td><td class="article"><a href="./essay/pkgsrc-fun.html">pkgsrcのたのしさ、FLOSSのたのしさ</a></td></tr>
     <tr><td class="date">2020/07/18</td><td class="article"><a href="./essay/free_flaws.html">自由を妨げるものとHyperbolaプロジェクト</a></td></tr>
     <tr><td class="date">2019/12/30</td><td class="article"><a href="./essay/github_actions.html">GitHub ActionsでホームページのCIを確立した</a></td></tr>
