NetBSD: About Upgrading PostgreSQL

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ th,td.article{border:0;text-align:left;padding:0 0 0 1em;}
 <h3 id="netbsd">NetBSD</h3>
 <table class="article">
   <tbody>
+    <tr><td class="date">2022/07/03</td><td class="article"><a href="./netbsd/upgrade_postgresql.html">NetBSDで動かしているPostgreSQLサーバをアップグレードする</a></td></tr>
     <tr><td class="date">2021/10/30</td><td class="article"><a href="./netbsd/podman.html">NetBSDでPodmanからLinuxコンテナを動かす</a></td></tr>
     <tr><td class="date">2021/03/07</td><td class="article"><a href="./netbsd/ansible.html">AnsibleホストとしてNetBSDを扱う</a></td></tr>
     <tr><td class="date">2020/09/22</td><td class="article"><a href="./netbsd/jenkins.html">NetBSDにJenkinsをインストールする</a></td></tr>
