software engineering: improve about software engineering

--- a/practice/engineering_in_hello_world.html
+++ b/practice/engineering_in_hello_world.html
@@ -45,11 +45,18 @@
 
 <h3>「ソフトウェアエンジニアリング」と「プログラミング」</h3>
 
-<p>いっぽうで「ソフトウェアエンジニア」がおこなう「ソフトウェアエンジニアリング」は「プログラマ」がおこなう「プログラミング」とどのように区別されるのか疑問を抱くかもしれません。</p>
+<p>いっぽうで「ソフトウェアエンジニア」がおこなう「ソフトウェアエンジニアリング」は「プログラマ」がおこなう「プログラミング」とどのように区別されるのか疑問を抱くかもしれません。「ソフトウェアエンジニアリング」をテーマにした3つの書籍からこの言葉の意味を探っていきましょう。</p>
 
 <p>『Googleのソフトウェアエンジニアリング』においてTitus Wintersは「我々の見るところ、プログラミングとソフトウェアエンジニアリングの決定的な違いは3つある。時間、スケール、そして作用しているトレードオフだ」（p.3）とし、「プログラミングは、コードを生産する即時的行動である。ソフトウェアエンジニアリングとは、コードを利用しなければならない期間中に有用に保つのに必要であり、またチームを横断した共同作業を可能とする、ポリシー、プラクティス、ツールのセットである」（p.29）と論じています。</p>
 
-<!-- TODO: 他にも文献をもとに違いを説明する。 -->
+<p>また『モダン・ソフトウェアエンジニアリング』においてIvar Jacobsonらはソフトウェア開発プロジェクトが持つ複雑さに着目し「このような複雑さに対応する唯一の方法は、テスト、デプロイ、バージョン管理、構成管理など、目的に応じた専用のツールを使用することである」（p.13）としたうえで「ソフトウェアエンジニアリングとは、ソフトウェアの開発、テスト、デプロイ、運用、保守において、体系的で規律のある定量可能なアプローチを適用するものである」（p.13）と示しています。</p>
+
+<p>最後に『実践ソフトウェアエンジニアリング [第9版]』においてRoger S. PressmanとBruce R. MaximはIEEE/ISO/IEC 24765-2017の『ISO/IEC/IEEE International Standard - Systems and software engineering -- Vocabulary』から「ソフトウェアエンジニアリング：ソフトウェアの開発、運用、メンテナンスに対するシステマティックで規律(discipline)ある、定量化できるアプローチの適用、すなわちソフトウェアに対するエンジニアリングの適用」（p.7）という定義を引用したのちに、「品質に焦点を合わせること(quality focus)」（p.7）を基盤として、下から順にプロセス・手法・ツールという階層構造がソフトウェアエンジニアリングに含まれていることを指摘しています。</p>
+
+<!--
+  IEEE/ISO/IEC 24765-2017 ISO/IEC/IEEE International Standard - Systems and software engineering -- Vocabulary
+  https://standards.ieee.org/ieee/24765/6800/
+-->
 
 <p>つまりソフトウェアエンジニアリングは単にエンジニアがコードを書くというだけに留まらず、チームが一丸となってそのコードを長い期間安定して保守していくために必要な活動すべてを指しているということです。</p>
 
@@ -63,10 +70,18 @@
 
 <p>本文は予告なく変更されます。変更履歴等は明記しません。</p>
 
+<h3>まとめ</h3>
+
+<p>ソフトウェアエンジニアリングの定義はさまざまです。簡単に説明すると、単にプログラミングをしてソースコードを書き上げるだけに留まらず、そのソフトウェアが寿命を迎えるまでにおこなわなければならないあらゆる行動に対して定量的かつ規律ある手法を適用していく活動です。</p>
+
+<p>本稿ではHello Worldのプログラムを通じてソフトウェアエンジニアリングの実践を試みます。</p>
+
 <h3>より理解を深めるために</h3>
 
 <ul>
   <li>『<b>Googleのソフトウェアエンジニアリング</b>』Titus Winters、Tom Manshreck、Hyrum Wright 編、竹辺 靖昭 監訳、久富木 隆一 訳（O'reilly Japan、2021年）</li>
+  <li>『モダン・ソフトウェアエンジニアリング』Ivar Jacobson、Harold "Bud" Lawson、Pan-Wei Ng、Paul E. McMahon、Michael Goedicke 著、角 征典 訳、鷲崎 弘宜 監修（翔泳社、2020年）</li>
+  <li>『<b>実践ソフトウェアエンジニアリング [第9版]</b>』Roger S. Pressman、Bruce R. Maxim 共著、SEPA翻訳プロジェクト 訳（オーム社、2021年）</li>
 </ul>
 
 <h2 id="prepare">読み進めるための準備</h2>
