software engineering: Update about documentation

--- a/practice/engineering_in_hello_world.html
+++ b/practice/engineering_in_hello_world.html
@@ -218,13 +218,78 @@ make: 'all' に対して行うべき事はありません.
 
 <h2 id="documentation">Hello Worldのドキュメンテーション</h2>
 
+<h3>ドキュメントの意義</h3>
+
 <p>ここまででHello Worldプログラムを作り、そのビルドをMakefileで自動化することができました。次にやるべきことは、これまでに用意したファイル等について説明する<b>ドキュメント</b>を作るというものです。</p>
 
 <p>なぜドキュメントを作らなければならないのでしょうか？ドキュメントは自分以外の誰かに対してビルドやソフトウェアを利用するための方法を説明したり、プロジェクトの意義や目的などを文章として残したりするために必要です。そして一般にソフトウェア開発は開発者一人だけでおこなわれずに、複数人がチームとして共同で作業することで達成されます。またソフトウェア開発プロジェクトが大規模になり時間がかかればかかるほど、戦力として新しくメンバーが参加する可能性もあります。</p>
 
 <p>プライベートの時間で開発したソフトウェアならドキュメントは不要でしょうか？そうではありません。なぜなら人間はものごとを忘れる生き物だからです。そのソフトウェアに夢中になっているあいだは問題ないかもしれませんが、もし時間を空けて再度そのプロジェクトに取り掛かったりその成果物を使いたくなったたりしたときには、曖昧な記憶に頼るよりはドキュメントを読んだほうが手っ取り早いですし確実でしょう。</p>
 
-<p>一方でドキュメンテーションはプログラミング等の作業と比べて優先順位が下がりがちな傾向にあります。アジャイルソフトウェア開発宣言（<a href="https://agilemanifesto.org/iso/ja/manifesto.html">https://agilemanifesto.org/iso/ja/manifesto.html</a>）では「包括的なドキュメントよりも動くソフトウェアを」という言葉もあります（これはドキュメントに価値がないという意味ではありません）。また Andrew HuntとDavid Thomasは『達人プログラマー』において「ほとんどの開発者はドキュメントのことについてあまり考えていません」（p.276）と断言しています。その上でAndrewらは「我々はコードとドキュメントを分けるという考え方から離れ、それらを同じモデルの2つのビューとして扱うべきなのです。……（略）……すべてのドキュメントはコードを反映したものになっているはずです」（p.276）と述べ、もしドキュメントとソースコードとの間でなにかしらの矛盾があった場合は「どんな場合であれ、それはコードの問題へとつながっていくのです」と論じています。つまりドキュメンテーションはソースコードの問題を燻り出す可能性も秘めているのです。</p>
+<p>一方でドキュメンテーションはプログラミング等の作業と比べて優先順位が下がりがちな傾向にあります。アジャイルソフトウェア開発宣言（<a href="https://agilemanifesto.org/iso/ja/manifesto.html">https://agilemanifesto.org/iso/ja/manifesto.html</a>）では「包括的なドキュメントよりも動くソフトウェアを」という言葉もあります（これはドキュメントに価値がないという意味ではありません）。また Andrew HuntとDavid Thomasは『達人プログラマー』において「ほとんどの開発者はドキュメントのことについてあまり考えていません」（p.276）と断言しています。</p>
+
+<p>ではドキュメンテーションは後回しにされて然るべきものなのでしょうか？違います。そのような実状を踏まえたうえでAndrewらは「我々はコードとドキュメントを分けるという考え方から離れ、それらを同じモデルの2つのビューとして扱うべきなのです。……（略）……すべてのドキュメントはコードを反映したものになっているはずです」（p.276）と述べ、もしドキュメントとソースコードとの間でなにかしらの矛盾があった場合は「どんな場合であれ、それはコードの問題へとつながっていくのです」と論じています。つまりドキュメンテーションはソースコードの問題を燻り出す可能性も秘めているのです。</p>
+
+<h3>なにを書き残すべきか</h3>
+
+<p>ドキュメンテーションのモチベーションをつかんだところで、現時点でのHello Worldプロジェクトでなにをドキュメントとして書き残すべきかを考えてみましょう。これまでおこなってきたことを列挙してみます。</p>
+
+<ul>
+  <li>RHEL9をインストールした。</li>
+  <li>コンパイラと<code>make</code>のパッケージをインストールした。</li>
+  <li>コンパイルして生成されたバイナリを実行した。</li>
+</ul>
+
+<p>これらがドキュメントとして残ってあれば、なにも知らない他の誰かがディレクトリを覗いたとしてもバイナリを実行できるところまでたどり着けるでしょう。</p>
+
+<p>一般にドキュメントには、上記のような実行環境やビルド方法といったこと以外にも盛り込まれる内容があります。</p>
+
+<ul>
+  <li>プロジェクトの目的</li>
+  <li>ソースコードのライセンス</li>
+  <li>著者への連絡先</li>
+  <li>寄付に関する情報</li>
+  <li>スポンサーの一覧</li>
+</ul>
+
+<h3>Hello Worldのドキュメントを書く</h3>
+
+<p>ここではプロジェクトの目的もドキュメントに記載することにします。</p>
+
+<p>同じディレクトリの階層に<code>README</code>というファイルを作りそこにドキュメントを書いていきます。</p>
+
+<pre><code>
+Hello World -- Hello Worldを通じてソフトウェアエンジニアリングを学ぶためのプロジェクト
+
+実行環境：
+
+Red Hat Enterprise Linux 9
+
+ビルド方法：
+
+次のパッケージをインストールしてください。
+
+- gcc
+- make
+
+ビルドするには次のように実行します。
+
+make
+
+実行方法：
+
+./hello_world
+</code></pre>
+
+<p>もっとわかりやすい書き方や修飾の仕方があるかもしれませんが、ここではこのようにしておきます。</p>
+
+<p>ここまでで<code>engineering_in_hello_world</code>のディレクトリは次のようになっています。</p>
+
+<pre><code>engineering_in_hello_world
+├── hello_world
+├── main.c
+├── Makefile
+└── README</code></pre>
 
 <h3>より理解を深めるために</h3>
 
